[package]
name = "escrow"
version = "0.1.0"
description = "Event-driven escrow demo (Solana/Anchor): create/take/cancel offers with vault custody."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

