[package]
name = "tx-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
borsh = "0.10.4"
clap = { version = "4.5.26", features = ["derive", "env"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

solana-client = "1.18.26"
solana-sdk = "1.18.26"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"

